[package]
name = "backend-nerve"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
futures-util = "0.3"
actix-ws = "0.3.0"
futures = "0.3"
actix = "0.13"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-native-tls"] }
jsonwebtoken = "8.0"